compiler/testdata/invalid/enum_no_brace.pr
// Enum declaration without braces.
enum Dir
